# gacetachat

./: .claudefile  .env.example  .env.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  DOSSIER_ONG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RUN_TESTS.md  SECURITY.md  SECURITY_INCIDENT.md  SERVERLESS_ALPHA_README.md  TESTING_SUMMARY.md  TEST_SETUP_COMPLETE.md  app.py  backend_updates.sql  config.py  conftest.py  crud.py  db.py  demo.py  demo_data.json  demo_simple.py  download_gaceta.py  faiss_helper.py  fastapp.py  gaceta.db  gaceta1.db  logging_setup.py  mkdocs.yml  models.py  oauth_helpers.py  package-lock.json  pdf_processor.py  preset.py  process_pdf.py  (+10 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  ngo_partnership.md  question.md
.streamlit/: config.toml
archive/v1/: Dockerfile  (+22 more)
data/: summaries.json
docs/: ALPHA_SETUP.md  ARCHITECTURAL_OVERHAUL.md  ARCHITECTURE.md  COMMUNITY_HEALTH.md  DEVELOPMENT.md  DOCUMENT_ANALYSIS_API_RESEARCH_2025.md  GRANT_STRATEGY.md  HEADER_IMAGES_FEATURE.md  LOCAL_TESTING.md  MULTI_LANGUAGE_STRATEGY.md  NGO_EXPERT_ANALYSIS.md  OPENAI_GRANT_STRATEGY.md  PAGE_REFERENCE_ACCURACY.md  PROMPT_VERSIONING_SYSTEM.md  QUICK_START_GUIDE.md  STREAMLIT_CLOUD_SETUP.md  TEST_ARCHITECTURE.md  archivo.html  index.html  index.md
mpages/: 1_Home.py  2_Twitter.py  3_Admin.py
scripts/: capture_screenshots.py  scrape_and_summarize.py
services/: counter.py
site/: 404.html  index.html  sitemap.xml
stream/: api.py
tests/: README.md  __init__.py  conftest.py  test_scraper_integration.py  test_scraper_unit.py
(+142 files in other folders)
