[project]
name = "gacetachat"
version = "2.0.0-alpha"
description = "AI-powered daily summaries of Costa Rica's official gazette"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GacetaChat Team", email = "contact@gacetachat.cr"}
]
keywords = ["civic-tech", "ai", "government-transparency", "costa-rica"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Demo only (minimal)
    "streamlit>=1.28.2",
]

[project.optional-dependencies]
# Full prototype (old, don't use)
prototype = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "openai>=1.3.5",
    "langchain>=0.0.335",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.17.4",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
]

# Development tools
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/GSejas/gacetachat"
Documentation = "https://github.com/GSejas/gacetachat/tree/main/docs"
Repository = "https://github.com/GSejas/gacetachat"
Issues = "https://github.com/GSejas/gacetachat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["gacetachat"]
